handlers ok, add tests
