# handlers/handlersTask.go
@@ -1,8 +1,8 @@
 package handlers
 
 import (
-	"fmt"
 	"net/http"
+	"sort"
 	"time"
 	"time-tracker/database"
 	"time-tracker/models"
@@ -10,66 +10,66 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func GetUserEffort(c *gin.Context) {
-	// Extract parameters from the request
+// SortTasks сортирует задачи пользователя по убыванию продолжительности.
+// @Summary Sort user tasks
+// @Description Sort user tasks by duration in descending order
+// @Tags tasks
+// @Accept  json
+// @Produce  json
+// @Param userID path string true "User ID"
+// @Param start_time query string true "Start time filter (RFC3339 format)"
+// @Param end_time query string true "End time filter (RFC3339 format)"
+// @Success 200 {object} []models.Task
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Failure 500 {object} ErrorResponse "Failed to retrieve tasks"
+// @Router /user/{userID}/tasks/sort [get]
+func SortTasks(c *gin.Context) {
+	var user models.User
 	userID := c.Param("userID")
-	startDateStr := c.Query("start_date")
-	endDateStr := c.Query("end_date")
+	startTime := c.Query("start_time")
+	endTime := c.Query("end_time")
 
-	// Parse dates
-	var startDate, endDate time.Time
-	var err error
+	// Поиск пользователя по ID
+	if err := database.DB.First(&user, userID).Error; err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+		return
+	}
 
-	if startDateStr != "" {
-		startDate, err = time.Parse("2006-01-02", startDateStr)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid start_date format, should be YYYY-MM-DD"})
-			return
+	// Извлечение задач пользователя за указанный период времени
+	var tasks []models.Task
+	if err := database.DB.Where("user_id = ? AND start_time >= ? AND end_time <= ?", user.ID, startTime, endTime).
+		Find(&tasks).Error; err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve tasks"})
+		return
+	}
+
+	// Функция для расчета продолжительности задачи
+	calculateDuration := func(task models.Task) time.Duration {
+		if task.EndTime != nil {
+			return task.EndTime.Sub(task.StartTime)
 		}
+		return time.Duration(0)
 	}
 
-	if endDateStr != "" {
-		endDate, err = time.Parse("2006-01-02", endDateStr)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid end_date format, should be YYYY-MM-DD"})
-			return
-		}
-		// Adjust end date to include full day
-		endDate = endDate.Add(24 * time.Hour).Add(-time.Second)
+	// Сортировка задач по убыванию продолжительности
+	sortByDurationDesc := func(i, j int) bool {
+		return calculateDuration(tasks[i]) > calculateDuration(tasks[j])
 	}
+	sort.Slice(tasks, sortByDurationDesc)
 
-	// Prepare query to calculate total effort (hours and minutes)
-	var efforts []struct {
-		UserID  string `json:"user_id"`
-		Hours   int    `json:"hours"`
-		Minutes int    `json:"minutes"`
-	}
-
-	query := database.DB.Model(&models.Task{}).
-		Select("user_id, SUM(EXTRACT(HOUR FROM duration)) AS hours, SUM(EXTRACT(MINUTE FROM duration)) AS minutes").
-		Where("user_id = ?", userID)
-
-	// Apply date range filter if provided
-	if !startDate.IsZero() && !endDate.IsZero() {
-		query = query.Where("start_time BETWEEN ? AND ?", startDate, endDate)
-	} else if !startDate.IsZero() {
-		query = query.Where("start_time >= ?", startDate)
-	} else if !endDate.IsZero() {
-		query = query.Where("start_time <= ?", endDate)
-	}
-
-	// Group by user_id and order by total effort (hours and minutes)
-	query.Group("user_id").Order("hours DESC, minutes DESC").Scan(&efforts)
-
-	// Log generated SQL query
-	sql, _ := query.Debug().Find(&efforts).Rows()
-	fmt.Println("SQL query:", sql)
-
-	c.JSON(http.StatusOK, gin.H{
-		"efforts": efforts,
-	})
+	c.JSON(http.StatusOK, gin.H{"tasks": tasks})
 }
 
+// StartTask начинает новую задачу для пользователя.
+// @Summary Start a new task
+// @Description Start a new task for the user
+// @Tags tasks
+// @Accept  json
+// @Produce  json
+// @Param userID path string true "User ID"
+// @Success 201 {object} models.Task
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Router /user/{userID}/tasks/start [post]
 func StartTask(c *gin.Context) {
 	var user models.User
 	userID := c.Param("userID")
@@ -94,6 +94,18 @@ func StartTask(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{"task": task})
 }
 
+// FinishTask завершает активную задачу пользователя.
+// @Summary Finish active task
+// @Description Finish the active task for the user
+// @Tags tasks
+// @Accept  json
+// @Produce  json
+// @Param userID path string true "User ID"
+// @Success 200 {object} models.Task
+// @Failure 404 {object} ErrorResponse "User not found"
+// @Failure 404 {object} ErrorResponse "No active task found for the user"
+// @Failure 500 {object} ErrorResponse "Failed to finish task"
+// @Router /user/{userID}/tasks/finish [put]
 func FinishTask(c *gin.Context) {
 	var user models.User
 	userID := c.Param("userID")
@@ -112,7 +124,7 @@ func FinishTask(c *gin.Context) {
 	}
 
 	// Set the end time to now
-	now := time.Now().UTC()
+	now := time.Now()
 	task.EndTime = &now
 
 	// Save the updated task to the database
@@ -124,6 +136,17 @@ func FinishTask(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"task": task})
 }
 
+// GetUserTasks получает все задачи пользователя.
+// @Summary Get user tasks
+// @Description Get all tasks for the user
+// @Tags tasks
+// @Accept  json
+// @Produce  json
+// @Param id path string true "User ID"
+// @Success 200 {array} models.Task
+// @Failure 404 {object} ErrorResponse "No tasks found for the user"
+// @Failure 500 {object} ErrorResponse "Failed to fetch tasks"
+// @Router /user/{id}/tasks [get]
 func GetUserTasks(c *gin.Context) {
 	// Extract user ID from URL parameter
 	userID := c.Param("id")
